styles.css
/* ... */
/* 

FOOTER

*/

#footer {
  padding: 1rem 2rem 6rem 2rem;
}

.footer__container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 1320px;
}
.footer__logo {
  display: flex;
  align-items: center;
  gap: 0.6rem;
}
.footer__logo-img {
  width: 30px;
}
.footer__logo-name {
  color: white;
  font-size: 1.4rem;
  font-weight: 900;
}
.footer__copyrights {
  color: rgba(255, 255, 255, 0.759);
  font-weight: 300;
  font-size: 1.0125rem;
}
.footer__links {
  display: flex;
  gap: 1rem;
}
.footer__link {
  display: flex;
  padding: 0.5rem;
  border-radius: 9999px;
  background-color: white;
  transition-duration: 300ms;
}
.footer__link:hover {
    background-color: rgb(194, 227, 239);
}
.footer__link-img {
  width: 1rem;
  height: 1rem;
  filter: grayscale(1);
}





@media (max-width: 1024px) {
  .nav__links {
    display: none;
  }
  .btn__menu {
    display: block;
  }
}

/* 

PHONES

*/

@media (max-width:1024px) {
  .header__flex {
    flex-direction: column;
  }
  .header__info-container {
    width: 100%;
    max-width: 32rem;
    margin: 0 auto 2rem auto;
    text-align: center;
  }
  .header__img-container {
    display: flex;
    width: 100%;
  }
  .header__img {
    transform: none;
  }
  .header__input-wrapper {
    max-width: 100%;
  }
  .header__input-button {
    top: 4.8rem;
    right: 50%;
    transform: translateX(50%);
  }
  .header__info-title {
    font-size: 1.875rem;
  }
  .prices__container {
    flex-direction: column;
    align-items: center;
  }
  .prices {
    margin-right: 0;
  }
  .testimonial__info-container {
    padding-left: 3rem;
  }
  .testimonial__user-img--wrapper {
    width: 4rem;
    height: 4rem;
  }
  .testimonial__user-subinfo  {
    margin-left: 1rem;
  }
  .features {
    width: 50%;
  }
  .getstarted__container {
    flex-direction: column;
    align-items: center;
    gap: 1.5rem;
  }
  .getstarted__title {
    text-align: center;
  }
  .getstarted__button-container {
    justify-content: center;
    width: 100%;
  }
}


@media (max-width:768px) {
  .values__button {
    margin-top: 0;
  }
  .flex {
    flex-direction: column;
    margin: 0 auto;
  }
  .features {
    width: 100%;
  }
  .section__title,
  .section__subtitle,
  .section__para {
    text-align: center;
  }
  .header__info-para {
    max-width: 100%;
  }
  .section__para {
    margin-top: 1rem;
    font-size: 0.875rem;
    font-weight: 500;
    line-height: 1.625;
    --tw-text-opacity: 1;
    color: rgba(124,139,161,var(--tw-text-opacity));
    max-width: 36rem;
    margin: 1rem auto 36px auto;
  }
  .section__img-container,
  .header__info-container,
  .work__info-container,
  .steps__info-container,
  .values__info-container,
  .testimonial__info-container {
    text-align: center;
    width: 100%;
  }
  .testimonial__info-container {
    padding-left: 0;
  }
  .section__img-container {
    margin-top: 2rem;
  }
  .testimonial__subinfo-container {
    text-align: center;
  }
  .testimonial__subinfo-title {
    text-align: center;
  }
  .testimonial__subinfo-para {
    max-width: 500px;
    margin: 1rem auto 2rem auto;
  }
  .section__breaker {
    justify-content: center;
  }
  .section__info-para {
    margin: 0 auto 2rem auto;
  }
  .prices {
    margin: 4rem auto 2rem auto;
  }
  .steps__info-container {
    margin: 5rem auto 0 auto;
  }
  .step {
    flex-direction: column;
    align-items: center;
  }
  .step__num {
    margin-left: 1rem;
  }
}



@media (max-width:720px) {
  .question {
    font-size: 1.125rem;
  }
  .faq__answers {
    font-size: 15px;
  }
  
}


@media (max-width:700px) {
  .footer__container {
    flex-direction: column;
    align-items: center;
    gap: 2rem;
  }
}

@media (max-width:682px) {
  .faq__answers {
    transform: translateY(90%);
  }
}


@media (max-width:640px) {
  .plan__price {
    font-size: 2.25rem;
  }
  .section__subtitle {
    text-align: center;
    font-size: 2.25rem;
  }
  .features {
    flex-direction: column;
  }

  .features {
    flex-direction: column;
    align-items: center;
  }
  .features__img {
    margin-right: 0;
  } 
  .features__info-wrapper {
    text-align: center;
    margin-top: 12px;
  }
  .features__info-para {
    text-align: center;
  }
  .getstarted__button-container {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 20px;
  }
  .getstarted__container-main {
    padding: 4rem 2rem;
  }
  .getstarted__title {
    font-size: 20px;
    width: 100%;
  }
  .getstarted__button-1,
  .getstarted__button-2 {
    padding: 0.75rem 1.5rem;
    font-size: 0.875rem;
  }
  .testimonial__users {
    flex-direction: column;
  }
  .testimonial__user-info {
    justify-content: center;
    margin-bottom: 1rem;
  }
}

@media (max-width:552px) {
  .question__container:hover {
    padding-bottom: 12rem;
  }
}

@media (max-width:390px) {
  .question__container:hover {
    padding-bottom: 14rem;
  }
  .faq__answers {
    transform: translateY(86%);
  }
}

